--- a/index.html
+++ b/index.html
@@ -7,19 +7,74 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/font.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/slideshow.css">
+    <link rel="stylesheet" href="./assets/css/products.css">
+    <script defer src="./assets/js/navbar.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <title>Pratica do Boostrap</title>
 </head>
 <body>
     <header>
-        <div class=".container-fluid" style="background-color: red;">
-            <div class="container-xxl px-4 border-bottom align-items-center d-flex justify-content-between" style="background-color: #ffffff;">
-                <img class="logo-header" src="logoheader.png">
-                <div>
-                    ....
-                </div>
+        <div class=".container-fluid" style="background-color: #ffffff;">
+            <div class="container-xxl px-5 py-3" style="background-color: #ffffff;">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="">
+                        <img class="logo-header" src="./assets/images/logoheader.png">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-item nav-link item-style active" href="#">Home</a>
+                            <a class="nav-item nav-link item-style" href="#">Destaques</a>
+                            <a class="nav-item nav-link item-style" href="#">Preços</a>
+                            <a class="nav-item nav-link item-style" href="#">Desativado</a>
+                        </div>
+                    </div>
+                </nav>
             </div>
         </div>
     </header>
+    <main>
+        <section>
+            <div class="container-xxl">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="./assets/images/slideshow3650.jpg" alt="Second slide">
+                        <button type="button" class="btn btn-dark slidebutton">Saiba Mais</button>
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="./assets/images/slideshow3650.jpg" alt="Second slide">
+                        <button type="button" class="btn btn-dark slidebutton">Dark</button>
+                      </div>
+                      <div class="carousel-item">
+                        {{! <img class="d-block w-100" src="..." alt="Third slide"> }}
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    </a>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container-xxl py-5 text-center">
+                <h1 class="section-title justify-content-center">Servidores</h1>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
