--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <body>
     <header>
         <div class=".container-fluid" style="background-color: #ffffff;">
-            <div class="container-xxl px-5 py-3" style="background-color: #ffffff;">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-xxl px-5 py-3 res-padding" style="background-color: #ffffff;">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light flex-nowrap">
                     <a class="navbar-brand" href="">
-                        <img class="logo-header" src="./assets/images/logoheader.png">
+                        <img class="img-fluid logo-header" src="./assets/images/logoheader.png">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
                         <span class="navbar-toggler-icon"></span>
@@ -50,15 +50,14 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img class="d-block w-100" src="./assets/images/slideshow3650.jpg" alt="Second slide">
-                        <button type="button" class="btn btn-dark slidebutton">Saiba Mais</button>
+                        <img class="d-block w-100 img-carousel" src="./assets/images/slideshow3650.jpg" alt="Second slide">
+                        <button type="button" class="btn btn-dark slidebutton" style="display: none;">Saiba Mais</button>
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="./assets/images/slideshow3650.jpg" alt="Second slide">
-                        <button type="button" class="btn btn-dark slidebutton">Dark</button>
+                        <img class="d-block w-100 img-carousel" src="./assets/images/teste.png" alt="Second slide">
                       </div>
                       <div class="carousel-item">
-                        {{! <img class="d-block w-100" src="..." alt="Third slide"> }}
+                        <img class="d-block w-100 img-carousel" src="./assets/images/teste.png" alt="Second slide">
                       </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -73,6 +72,84 @@
         <section>
             <div class="container-xxl py-5 text-center">
                 <h1 class="section-title justify-content-center">Servidores</h1>
+                <div class="container-xxl mt-4">
+                    <ul class="list-group flex-row justify-content-center">
+                        <li class="list-group-item underline active-list-item">Todos</li>
+                        <li class="list-group-item underline">Dell</li>
+                        <li class="list-group-item underline">IBM</li>
+                        <li class="list-group-item underline">Hp</li>
+                    </ul>
+                </div>  
+                <div class="container-xxl mt-2 products-list">
+                    <div class="row form-group">
+                        <div class="col-4">
+                            <div class="card padding-card">
+                                <img class="card-img-top" src="./assets/images/r710.png" alt="aaa"/>
+                                <div class="card-body">
+                                    <h5 class="card-title">R470</h5>
+                                    <p class="card-text">Servidor Customizavel</P>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card padding-card">
+                                    <img class="card-img-top" src="./assets/images/r710.png" alt="aaa"/>
+                                    <div class="card-body">
+                                        <h5 class="card-title">R470</h5>
+                                        <p class="card-text">Servidor Customizavel</P>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card padding-card">
+                                    <img class="card-img-top" src="./assets/images/r710.png" alt="aaa"/>
+                                    <div class="card-body">
+                                        <h5 class="card-title">R470</h5>
+                                        <p class="card-text">Servidor Customizavel</P>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card padding-card">
+                                    <img class="card-img-top" src="./assets/images/r710.png" alt="aaa"/>
+                                    <div class="card-body">
+                                        <h5 class="card-title">R470</h5>
+                                        <p class="card-text">Servidor Customizavel</P>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card padding-card">
+                                    <img class="card-img-top" src="./assets/images/r710.png" alt="aaa"/>
+                                    <div class="card-body">
+                                        <h5 class="card-title">R470</h5>
+                                        <p class="card-text">Servidor Customizavel</P>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card padding-card">
+                                    <img class="card-img-top" src="./assets/images/r710.png" alt="aaa"/>
+                                    <div class="card-body">
+                                        <h5 class="card-title">R470</h5>
+                                        <p class="card-text">Servidor Customizavel</P>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
