--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 </head>
 <body>
   <header>
-    <div class=".container-fluid header-fluid">
-      <div class="container-xxl py-1 res-padding header-container">
+    <div class=".container-fluid">
+      <div class="container-xxl py-1 px-4">
         <nav class="navbar navbar-expand-lg navbar-light  flex-nowrap">
           <a class="navbar-brand" href="">
-            <img class="img-fluid logo-header" src="./assets/images/logoheader.png">
+            <img class="logo-header" src="./assets/images/logoheader.png">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
@@ -84,11 +84,11 @@
       <div class="container-xxl py-5 text-center">
         <h1 class="section-title justify-content-center">Servidores</h1>
         <div class="container-xxl mt-4">
-          <ul class="list-group flex-row justify-content-center">
-            <li class="list-group-item underline active-list-item">Todos</li>
-            <li class="list-group-item underline">Dell</li>
-            <li class="list-group-item underline">IBM</li>
-            <li class="list-group-item underline">Hp</li>
+          <ul class="list-group ul-container flex-row justify-content-center">
+            <li class="list-group-item underline style-i active-list-item">Todos</li>
+            <li class="list-group-item underline style-i">Dell</li>
+            <li class="list-group-item underline style-i">IBM</li>
+            <li class="list-group-item underline style-i">HP</li>
           </ul>
         </div>
         <div class="container-xxl mt-2 products-list">
@@ -97,7 +97,7 @@
               <div class="card padding-card card-product">
                 <img class="card-img-top" src="./assets/images/r710.png" alt="aaa" />
                 <div class="card-body">
-                  <h5 class="card-title">R470</h5>
+                  <h5 class="card-title card-title-style">R470</h5>
                   <p class="card-text card-text-product">Servidor Customizavel</p>
                   <a class="btn btn-buy-black" href="#" role="button"><span style="margin-right: 2px;">Comprar
                       Agora</span>
@@ -160,7 +160,7 @@
               <div class="card padding-card card-product">
                 <img class="card-img-top" src="./assets/images/r710.png" alt="aaa" />
                 <div class="card-body">
-                  <h5 class="card-title">R470</h5>
+                  <h5 class="card-title card-title-style">R470</h5>
                   <p class="card-text card-text-product">Servidor Customizavel</p>
                   <a class="btn btn-buy-black" href="#" role="button"><span style="margin-right: 2px;">Comprar
                       Agora</span>
@@ -223,7 +223,7 @@
               <div class="card padding-card card-product">
                 <img class="card-img-top" src="./assets/images/r710.png" alt="aaa" />
                 <div class="card-body">
-                  <h5 class="card-title">R470</h5>
+                  <h5 class="card-title card-title-style">R470</h5>
                   <p class="card-text card-text-product">Servidor Customizavel</p>
                   <a class="btn btn-buy-black" href="#" role="button"><span style="margin-right: 2px;">Comprar
                       Agora</span>
@@ -320,8 +320,8 @@
             <div class="col-4 border p-4 contact-section">
               <div class="row h-25">
                 <div class="col w-100">
-                  <h2>Entre em contato</h2>
-                  <h3>Faça um orçamento conosco</h3>
+                  <h2 class="font-contact-title">Entre em contato</h2>
+                  <h3 class="font-contact-subtitle">Faça um orçamento</h3>
                 </div>
               </div>
               <div class="row h-75">
