--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,6 +26,7 @@
     crossorigin="anonymous"></script>
   <title>Br2ti</title>
 </head>
+
 <body>
   <header>
     <div class=".container-fluid">
@@ -39,9 +41,9 @@
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-item nav-link item-style active" href="#">Home</a>
-              <a class="nav-item nav-link item-style" href="#">Destaques</a>
-              <a class="nav-item nav-link item-style" href="#">Preços</a>
+              <a class="nav-item nav-link item-style " href="#">Servidores</a>
+              <a class="nav-item nav-link item-style" href="#">Contato</a>
+              <a class="nav-item nav-link item-style" href="#">Serviços</a>
               <a class="nav-item nav-link item-style" href="#">Desativado</a>
             </div>
           </div>
@@ -91,7 +93,7 @@
             <li class="list-group-item underline style-i">HP</li>
           </ul>
         </div>
-        <div class="container-xxl mt-2 products-list">
+        <div class="container-xxl products-list">
           <div class="row">
             <div class="col-4">
               <div class="card padding-card card-product">
@@ -317,7 +319,7 @@
         <h1 class="section-title justify-content-center">Contato</h1>
         <div class="container-xxl">
           <div class="row height-limit mt-5">
-            <div class="col-4 border p-4 contact-section">
+            <div class="col-4 border p-4 contact-section py-5">
               <div class="row h-25">
                 <div class="col w-100">
                   <h2 class="font-contact-title">Entre em contato</h2>
@@ -382,9 +384,10 @@
                           <g>
                           </g>
                         </svg>
-                        <span style="margin-left: 10px;">91176941524</span>
+                        <span style="margin-left: 10px;">(11) 2866-4652</span>
                       </div>
-                      <div class="btn d-flex btn-contact fit-content align-items-center mt-4" style="padding-left: 2px;">
+                      <div class="btn d-flex btn-contact fit-content align-items-center mt-4"
+                        style="padding-left: 2px;">
                         <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50px"
                           height="37px">
                           <path
@@ -395,7 +398,8 @@
                       <div class="btn btn-contact d-flex fit-content align-items-center mt-4">
                         <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                           xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 75.294 75.294"
-                          style="enable-background:new 0 0 75.294 75.294; height: 30px; width: 30px;" xml:space="preserve">
+                          style="enable-background:new 0 0 75.294 75.294; height: 30px; width: 30px;"
+                          xml:space="preserve">
                           <g>
                             <path
                               d="M66.097,12.089h-56.9C4.126,12.089,0,16.215,0,21.286v32.722c0,5.071,4.126,9.197,9.197,9.197h56.9
@@ -451,7 +455,7 @@
                     <div class="md-form mb-0">
                       <label for="name" class="label-contact">Nome</label>
                       <input type="text" id="name" name="name" class="form-control">
-                    </div> 
+                    </div>
                   </div>
                   <div class="col-md-6">
                     <div class="md-form mb-0">
@@ -488,14 +492,84 @@
     <section>
       <div class="container-fluid py-5 datacenter-img">
         <h1 class="section-title text-center" style="color: white;">Serviços</h1>
-        <div class="container-xxl data-center">
+        <div class="container-xxl data-center  mt-4">
           <div class="row">
             <div class="col">
               <div class="card card-services">
                 <div class="card-top-img"></div>
                 <div class="card-body">
-                  <h5 class="card-title">R470</h5>
-                  <p class="card-text">Servidor Customizavel</p>
+                  <h5 class="card-title card-title-services text-center">Garantia</h5>
+                  <p class="card-text text-center card-text-services">6 Meses de Garantia em Compras acima de R$1000</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card card-services">
+                <div class="card-top-img d-flex justify-content-center">
+                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 491.1 491.1"
+                    style="enable-background:new 0 0 491.1 491.1;" width="125px" height="125px" xml:space="preserve">
+                    <g transform="translate(0 -540.36)">
+                      <g>
+                        <g>
+                          <path d="M401.5,863.31c-12,0-23.4,4.7-32,13.2c-8.6,8.6-13.4,19.8-13.4,31.8s4.7,23.2,13.4,31.8c8.7,8.5,20,13.2,32,13.2
+					c24.6,0,44.6-20.2,44.6-45S426.1,863.31,401.5,863.31z M401.5,933.31c-13.8,0-25.4-11.4-25.4-25s11.6-25,25.4-25
+					c13.6,0,24.6,11.2,24.6,25S415.1,933.31,401.5,933.31z" />
+                          <path d="M413.1,713.41c-1.8-1.7-4.2-2.6-6.7-2.6h-51.3c-5.5,0-10,4.5-10,10v82c0,5.5,4.5,10,10,10h81.4c5.5,0,10-4.5,10-10v-54.9
+					c0-2.8-1.2-5.5-3.3-7.4L413.1,713.41z M426.5,792.81h-61.4v-62.1h37.4l24,21.6V792.81z" />
+                          <path d="M157.3,863.31c-12,0-23.4,4.7-32,13.2c-8.6,8.6-13.4,19.8-13.4,31.8s4.7,23.2,13.4,31.8c8.7,8.5,20,13.2,32,13.2
+					c24.6,0,44.6-20.2,44.6-45S181.9,863.31,157.3,863.31z M157.3,933.31c-13.8,0-25.4-11.4-25.4-25s11.6-25,25.4-25
+					c13.6,0,24.6,11.2,24.6,25S170.9,933.31,157.3,933.31z" />
+                          <path d="M90.6,875.61H70.5v-26.6c0-5.5-4.5-10-10-10s-10,4.5-10,10v36.6c0,5.5,4.5,10,10,10h30.1c5.5,0,10-4.5,10-10
+					S96.1,875.61,90.6,875.61z" />
+                          <path
+                            d="M141.3,821.11c0-5.5-4.5-10-10-10H10c-5.5,0-10,4.5-10,10s4.5,10,10,10h121.3C136.8,831.11,141.3,826.71,141.3,821.11z" />
+                          <path d="M30.3,785.01l121.3,0.7c5.5,0,10-4.4,10.1-9.9c0.1-5.6-4.4-10.1-9.9-10.1l-121.3-0.7c-0.1,0-0.1,0-0.1,0
+					c-5.5,0-10,4.4-10,9.9C20.3,780.51,24.8,785.01,30.3,785.01z" />
+                          <path
+                            d="M50.7,739.61H172c5.5,0,10-4.5,10-10s-4.5-10-10-10H50.7c-5.5,0-10,4.5-10,10S45.2,739.61,50.7,739.61z" />
+                          <path d="M487.4,726.11L487.4,726.11l-71.6-59.3c-1.8-1.5-4-2.3-6.4-2.3h-84.2v-36c0-5.5-4.5-10-10-10H60.5c-5.5,0-10,4.5-10,10
+					v73.2c0,5.5,4.5,10,10,10s10-4.5,10-10v-63.2h234.8v237.1h-82c-5.5,0-10,4.5-10,10s4.5,10,10,10h122.1c5.5,0,10-4.5,10-10
+					s-4.5-10-10-10h-20.1v-191.1h80.6l65.2,54l-0.7,136.9H460c-5.5,0-10,4.5-10,10s4.5,10,10,10h20.3c5.5,0,10-4.4,10-9.9l0.8-151.6
+					C491,730.91,489.7,728.01,487.4,726.11z" />
+                        </g>
+                      </g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                  </svg>
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title card-title-services text-center">Pronta Entrega</h5>
+                  <p class="card-text card-text-services text-center">Dispachado em até 1 dia após a Compra</p>
                 </div>
               </div>
             </div>
@@ -503,21 +577,12 @@
               <div class="card card-services">
                 <div class="card-top-img"></div>
                 <div class="card-body">
-                  <h5 class="card-title">R470</h5>
-                  <p class="card-text">Servidor Customizavel</p>
+                  <h5 class="card-title card-title-services text-center">-----</h5>
+                  <p class="card-text text-center card-text-services">-----------------</p>
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="card card-services">
-                <div class="card-top-img"></div>
-                <div class="card-body">
-                  <h5 class="card-title">R470</h5>
-                  <p class="card-text">Servidor Customizavel</p>
-                </div>
-              </div>
           </div>
-        </div>
     </section>
   </main>
   <footer class="text-center text-lg-start bg-light text-muted">
