--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <a class="nav-item nav-link item-style " href="#">Servidores</a>
               <a class="nav-item nav-link item-style" href="#">Contato</a>
               <a class="nav-item nav-link item-style" href="#">Serviços</a>
-              <a class="nav-item nav-link item-style" href="#">Desativado</a>
+              <a class="nav-item nav-link item-style" href="#">Sobre</a>
             </div>
           </div>
         </nav>
@@ -496,7 +496,93 @@
           <div class="row">
             <div class="col">
               <div class="card card-services">
-                <div class="card-top-img"></div>
+                <div class="card-top-img d-flex justify-content-center">
+                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" width="110px"
+                    height="110px" style="enable-background:new 0 0 512 512; margin-bottom: 7.5px; margin-top: 7.5px;"
+                    xml:space="preserve">
+                    <g>
+                      <g>
+                        <g>
+                          <path d="M373.44,318.229c0.981-2.304,2.027-4.331,3.243-5.547c2.88-2.859,9.643-4.907,16.192-6.891
+                          c10.88-3.307,23.232-7.04,29.44-17.771c6.123-10.581,3.221-23.04,0.683-34.027c-1.579-6.741-3.2-13.717-2.091-17.792
+                          c0.96-3.733,5.931-9.003,10.304-13.653C439.083,214.165,448,204.672,448,192s-8.917-22.165-16.789-30.549
+                          c-4.373-4.651-9.323-9.92-10.304-13.632c-1.088-4.075,0.533-11.072,2.091-17.813c2.539-10.987,5.44-23.445-0.683-34.048
+                          c-6.208-10.731-18.539-14.464-29.44-17.749c-6.549-1.984-13.291-4.032-16.171-6.891c-2.88-2.859-4.907-9.621-6.891-16.171
+                          c-3.285-10.88-7.019-23.211-17.749-29.419c-10.645-6.165-23.061-3.264-34.069-0.704c-6.741,1.557-13.696,3.179-17.792,2.091
+                          c-3.733-1.003-9.003-5.952-13.653-10.325C278.166,8.917,268.672,0,256,0c-12.651,0-22.144,8.917-30.528,16.789
+                          c-4.672,4.373-9.941,9.323-13.675,10.325c-4.096,1.109-11.072-0.533-17.792-2.091c-11.029-2.56-23.467-5.44-34.069,0.683
+                          c-10.709,6.208-14.443,18.539-17.728,29.44c-1.984,6.549-4.032,13.312-6.891,16.171c-2.88,2.859-9.643,4.907-16.192,6.891
+                          c-10.88,3.307-23.232,7.04-29.44,17.771c-6.123,10.581-3.221,23.04-0.683,34.027c1.579,6.741,3.2,13.717,2.091,17.792
+                          c-0.96,3.733-5.931,9.003-10.304,13.653C72.918,169.835,64,179.349,64,192s8.917,22.165,16.789,30.549
+                          c4.373,4.651,9.323,9.92,10.304,13.632c1.088,4.075-0.533,11.072-2.091,17.813c-2.539,10.987-5.44,23.445,0.683,34.048
+                          c6.208,10.731,18.539,14.464,29.44,17.749c6.549,1.984,13.291,4.032,16.171,6.891c1.216,1.216,2.261,3.221,3.243,5.525
+                          L64.811,497.259c-1.707,4.117-0.661,8.853,2.581,11.883c2.027,1.877,4.629,2.859,7.275,2.859c1.621,0,3.243-0.363,4.779-1.152
+                          l79.787-39.893l58.859,39.232c2.709,1.792,6.101,2.24,9.195,1.28c3.093-1.003,5.568-3.349,6.699-6.4l23.296-62.123l20.587,61.76
+                          c1.067,3.157,3.541,5.632,6.677,6.72c3.136,1.067,6.592,0.64,9.365-1.216l58.859-39.232l79.787,39.893
+                          c1.536,0.768,3.157,1.131,4.779,1.131c2.645,0,5.248-0.981,7.253-2.837c3.243-3.029,4.288-7.765,2.581-11.883L373.44,318.229z
+                            M246.016,412.224l-27.285,72.747l-52.821-35.2c-3.221-2.112-7.296-2.389-10.688-0.661L95.36,479.04l54.229-131.733
+                          c2.56,4.352,5.717,8.277,10.347,10.965c10.645,6.165,23.083,3.264,34.069,0.704c6.72-1.557,13.675-3.221,17.792-2.091
+                          c3.733,1.003,9.003,5.952,13.653,10.325c3.008,2.816,6.229,5.653,9.6,8.277c0.085,0.405,0.021,0.811,0.149,1.216l11.477,34.453
+                          C246.486,411.541,246.166,411.819,246.016,412.224z M255.979,362.667c-4.203,0-10.432-5.845-15.936-11.008
+                          c-6.784-6.4-13.824-12.992-22.741-15.381c-2.88-0.768-5.781-1.088-8.704-1.088c-6.464,0-13.013,1.536-19.392,3.008
+                          c-6.827,1.6-15.275,3.563-18.56,1.621c-3.435-1.984-5.867-10.027-8.021-17.131c-2.731-9.067-5.547-18.432-12.224-25.088
+                          c-6.656-6.656-16.021-9.493-25.088-12.224c-7.104-2.133-15.147-4.565-17.152-8c-1.899-3.307,0.064-11.755,1.643-18.56
+                          c2.155-9.301,4.373-18.901,1.92-28.139c-2.411-8.917-9.003-15.936-15.381-22.741c-5.184-5.504-11.029-11.733-11.029-15.936
+                          s5.867-10.432,11.029-15.936c6.379-6.784,12.992-13.824,15.381-22.741c2.453-9.216,0.235-18.816-1.92-28.117
+                          c-1.579-6.805-3.541-15.253-1.643-18.539c2.005-3.435,10.048-5.867,17.173-8.021c9.067-2.731,18.411-5.568,25.088-12.224
+                          c6.635-6.635,9.472-16.021,12.224-25.067c2.155-7.104,4.587-15.168,8-17.152c3.349-1.877,11.776,0.064,18.539,1.643
+                          c9.259,2.155,18.837,4.395,28.117,1.92c8.917-2.389,15.957-9.003,22.763-15.381c5.483-5.163,11.712-11.008,15.915-11.008
+                          c4.203,0,10.432,5.845,15.936,11.008c6.784,6.4,13.824,12.992,22.741,15.381c9.259,2.475,18.859,0.235,28.096-1.92
+                          c6.805-1.6,15.275-3.541,18.56-1.621c3.435,1.984,5.867,10.027,8.021,17.131c2.731,9.067,5.547,18.432,12.224,25.088
+                          c6.656,6.656,16.021,9.493,25.088,12.224c7.104,2.133,15.147,4.565,17.152,8c1.899,3.307-0.064,11.755-1.643,18.56
+                          c-2.155,9.301-4.373,18.901-1.92,28.139c2.411,8.917,9.003,15.936,15.381,22.741c5.184,5.504,11.029,11.733,11.029,15.936
+                          s-5.867,10.432-11.029,15.936c-6.379,6.784-12.992,13.824-15.381,22.741c-2.453,9.216-0.235,18.816,1.92,28.117
+                          c1.579,6.805,3.541,15.253,1.643,18.539c-2.005,3.435-10.048,5.867-17.173,8.021c-9.067,2.731-18.411,5.568-25.088,12.224
+                          c-6.635,6.635-9.472,16.021-12.224,25.067c-2.155,7.104-4.587,15.168-8,17.152c-3.285,1.899-11.755-0.064-18.539-1.643
+                          c-9.259-2.155-18.837-4.395-28.117-1.92c-8.917,2.389-15.957,9.003-22.763,15.381
+                          C266.411,356.821,260.182,362.667,255.979,362.667z M356.758,449.131c-3.413-1.728-7.509-1.472-10.688,0.661l-52.373,34.923
+                          l-33.792-101.376c10.667-1.621,19.157-9.109,26.624-16.128c4.672-4.373,9.941-9.323,13.675-10.325
+                          c4.117-1.088,11.072,0.533,17.792,2.091c11.029,2.56,23.467,5.44,34.069-0.683c4.608-2.667,7.765-6.613,10.325-10.965
+                          l54.229,131.733L356.758,449.131z" />
+                          <path d="M384,192c0-70.592-57.408-128-128-128s-128,57.408-128,128s57.408,128,128,128S384,262.592,384,192z M256,298.667
+                          c-58.816,0-106.667-47.851-106.667-106.667S197.184,85.333,256,85.333S362.667,133.184,362.667,192S314.816,298.667,256,298.667z
+                          " />
+                        </g>
+                      </g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                  </svg>
+                </div>
                 <div class="card-body">
                   <h5 class="card-title card-title-services text-center">Garantia</h5>
                   <p class="card-text text-center card-text-services">6 Meses de Garantia em Compras acima de R$1000</p>
@@ -513,25 +599,25 @@
                       <g>
                         <g>
                           <path d="M401.5,863.31c-12,0-23.4,4.7-32,13.2c-8.6,8.6-13.4,19.8-13.4,31.8s4.7,23.2,13.4,31.8c8.7,8.5,20,13.2,32,13.2
-					c24.6,0,44.6-20.2,44.6-45S426.1,863.31,401.5,863.31z M401.5,933.31c-13.8,0-25.4-11.4-25.4-25s11.6-25,25.4-25
-					c13.6,0,24.6,11.2,24.6,25S415.1,933.31,401.5,933.31z" />
+                          c24.6,0,44.6-20.2,44.6-45S426.1,863.31,401.5,863.31z M401.5,933.31c-13.8,0-25.4-11.4-25.4-25s11.6-25,25.4-25
+                          c13.6,0,24.6,11.2,24.6,25S415.1,933.31,401.5,933.31z" />
                           <path d="M413.1,713.41c-1.8-1.7-4.2-2.6-6.7-2.6h-51.3c-5.5,0-10,4.5-10,10v82c0,5.5,4.5,10,10,10h81.4c5.5,0,10-4.5,10-10v-54.9
-					c0-2.8-1.2-5.5-3.3-7.4L413.1,713.41z M426.5,792.81h-61.4v-62.1h37.4l24,21.6V792.81z" />
+                          c0-2.8-1.2-5.5-3.3-7.4L413.1,713.41z M426.5,792.81h-61.4v-62.1h37.4l24,21.6V792.81z" />
                           <path d="M157.3,863.31c-12,0-23.4,4.7-32,13.2c-8.6,8.6-13.4,19.8-13.4,31.8s4.7,23.2,13.4,31.8c8.7,8.5,20,13.2,32,13.2
-					c24.6,0,44.6-20.2,44.6-45S181.9,863.31,157.3,863.31z M157.3,933.31c-13.8,0-25.4-11.4-25.4-25s11.6-25,25.4-25
-					c13.6,0,24.6,11.2,24.6,25S170.9,933.31,157.3,933.31z" />
+                          c24.6,0,44.6-20.2,44.6-45S181.9,863.31,157.3,863.31z M157.3,933.31c-13.8,0-25.4-11.4-25.4-25s11.6-25,25.4-25
+                          c13.6,0,24.6,11.2,24.6,25S170.9,933.31,157.3,933.31z" />
                           <path d="M90.6,875.61H70.5v-26.6c0-5.5-4.5-10-10-10s-10,4.5-10,10v36.6c0,5.5,4.5,10,10,10h30.1c5.5,0,10-4.5,10-10
-					S96.1,875.61,90.6,875.61z" />
+                          S96.1,875.61,90.6,875.61z" />
                           <path
                             d="M141.3,821.11c0-5.5-4.5-10-10-10H10c-5.5,0-10,4.5-10,10s4.5,10,10,10h121.3C136.8,831.11,141.3,826.71,141.3,821.11z" />
                           <path d="M30.3,785.01l121.3,0.7c5.5,0,10-4.4,10.1-9.9c0.1-5.6-4.4-10.1-9.9-10.1l-121.3-0.7c-0.1,0-0.1,0-0.1,0
-					c-5.5,0-10,4.4-10,9.9C20.3,780.51,24.8,785.01,30.3,785.01z" />
+				                	c-5.5,0-10,4.4-10,9.9C20.3,780.51,24.8,785.01,30.3,785.01z" />
                           <path
                             d="M50.7,739.61H172c5.5,0,10-4.5,10-10s-4.5-10-10-10H50.7c-5.5,0-10,4.5-10,10S45.2,739.61,50.7,739.61z" />
                           <path d="M487.4,726.11L487.4,726.11l-71.6-59.3c-1.8-1.5-4-2.3-6.4-2.3h-84.2v-36c0-5.5-4.5-10-10-10H60.5c-5.5,0-10,4.5-10,10
-					v73.2c0,5.5,4.5,10,10,10s10-4.5,10-10v-63.2h234.8v237.1h-82c-5.5,0-10,4.5-10,10s4.5,10,10,10h122.1c5.5,0,10-4.5,10-10
-					s-4.5-10-10-10h-20.1v-191.1h80.6l65.2,54l-0.7,136.9H460c-5.5,0-10,4.5-10,10s4.5,10,10,10h20.3c5.5,0,10-4.4,10-9.9l0.8-151.6
-					C491,730.91,489.7,728.01,487.4,726.11z" />
+                          v73.2c0,5.5,4.5,10,10,10s10-4.5,10-10v-63.2h234.8v237.1h-82c-5.5,0-10,4.5-10,10s4.5,10,10,10h122.1c5.5,0,10-4.5,10-10
+                          s-4.5-10-10-10h-20.1v-191.1h80.6l65.2,54l-0.7,136.9H460c-5.5,0-10,4.5-10,10s4.5,10,10,10h20.3c5.5,0,10-4.4,10-9.9l0.8-151.6
+                          C491,730.91,489.7,728.01,487.4,726.11z" />
                         </g>
                       </g>
                     </g>
@@ -575,10 +661,52 @@
             </div>
             <div class="col">
               <div class="card card-services">
-                <div class="card-top-img"></div>
+                <div class="card-top-img d-flex justify-content-center">
+                  <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 377.816 377.816" width="105px" height="105px"
+                    style="enable-background:new 0 0 377.816 377.816; margin-top: 10px; margin-bottom: 10px;" xml:space="preserve">
+                    <path d="M370.316,35.066H7.5c-4.142,0-7.5,3.358-7.5,7.5v227.725c0,4.142,3.358,7.5,7.5,7.5h237.29l33.091,61.034
+                    c1.312,2.419,3.842,3.925,6.593,3.925s5.282-1.506,6.593-3.925l33.092-61.034h46.157c4.142,0,7.5-3.358,7.5-7.5V42.566
+                    C377.816,38.424,374.458,35.066,370.316,35.066z M268.35,156.426l94.466-95.604V252.03L268.35,156.426z M109.461,156.428L15,252.026
+                    V60.828L109.461,156.428z M25.453,50.066h326.904L188.905,215.488L25.453,50.066z M319.694,262.791
+                    c-2.751,0-5.282,1.506-6.593,3.925l-28.626,52.799l-28.626-52.799c-1.312-2.419-3.842-3.925-6.593-3.925H25.451l94.553-95.692
+                    l63.566,64.332c1.409,1.426,3.33,2.229,5.335,2.229s3.926-0.803,5.335-2.229l63.567-64.333l94.554,95.694H319.694z" />
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                  </svg>
+
+                </div>
                 <div class="card-body">
-                  <h5 class="card-title card-title-services text-center">-----</h5>
-                  <p class="card-text text-center card-text-services">-----------------</p>
+                  <h5 class="card-title card-title-services text-center">Assistência</h5>
+                  <p class="card-text text-center card-text-services">Atendimento online para resoluções de erros</p>
                 </div>
               </div>
             </div>
